[package]
name = "pros_rs"
version = "0.1.0"
authors = ["Nixon <nixon.emoony@gmail.com>"]
edition = "2018"
license = "MPL-2.0"

[dependencies]
libc = "0.2.51"

[build-dependencies]
#pros_bindgen = "0.2.0"
bindgen = "0.49.0"


# RANDOM NOTES
# Need to compile to Cortex A9 
# 128 MB RAM
# 32 MB FLASH
# 
